apps/semaphore/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ansible
  labels:
    goldilocks.fairwinds.com/enabled: "true"
